agentcis-app-gitops-staging/working-manifest/multi-namespace/aws-gw.yml
---
# Gateway (NO annotations needed)
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: agentcis-stage-alb-gateway
  namespace: research
spec:
  gatewayClassName: aws-alb-gateway-class
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: agentcis-staging-alb-lbconfig
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces: { from: All }
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces: { from: All }
