agentcis-app-gitops-staging/working-manifest/multi-namespace/https-route.yml
#### https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/gateway/gateway_chaining/
---
# HTTPRoute - SAME namespace as Service
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: shyam-route
  namespace: shyam  # ✅ Same as Service
spec:
  parentRefs:
    - name: agentcis-stage-alb-gateway
      kind: Gateway
      namespace: research  # Cross-namespace OK
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix  # ✅ Exact match for /login
            value: /
      backendRefs:
        - name: shyam  # ✅ Same namespace
          port: 29000
          namespace: shyam
